set code snippet correctly for RTL layout

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2465,3 +2465,7 @@ a.banner:hover span {
   margin-right: 0;
   margin-left: 19px;
 }
+
+.rtl-layout .post-full-content pre {
+  direction: ltr;
+}
