--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2409,6 +2409,10 @@ a.banner:hover span {
   direction: rtl;
 }
 
+.rtl-layout .post-full-content pre {
+  direction: ltr;
+}
+
 .rtl-layout .author-card .avatar-wrapper,
 .rtl-layout .author-card img.author-profile-image {
   margin: 0 0 0 15px;
