--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2472,5 +2472,8 @@ a.banner:hover span {
 }
 
 .rtl-layout .post-full-content p code {
+  display: inline-block;
+  direction: ltr;
+  padding: 0.5rem;
   word-break: normal;
 }
