fix: RSS encoding and image (#216)
* fix: set XML encoding for RSS feed

* fix: RSS feed image format

* feat: add RSS feed encoding test, adjust common expected meta

--- a/src/_includes/layouts/feed.njk
+++ b/src/_includes/layouts/feed.njk
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/"
     xmlns:atom="http://www.w3.org/2005/Atom" xmlns:media="http://search.yahoo.com/mrss/" version="2.0">
     <channel>
@@ -9,7 +10,7 @@
         </description>
         <link>{{ site.url + "/" }}</link>
         <image>
-            <url>{{ site.icon }}</url>
+            <url>https://cdn.freecodecamp.org/universal/favicons/favicon.png</url>
             {% set metaTitle %}{% t 'meta-tags:title' %}{% endset %}
             <title>{{ (metaTitle | escape) if feed.path === "/" else (feed.name | safe + " - freeCodeCamp.org") }}</title>
             <link>{{ site.url + "/" }}</link>
