fix: ltr code element
@islamh-mahfouz, 
Thanks for taking the time and editing the articles.

I was able to achieve the above-mentioned results without altering the HTML using unicode-bidi:
```
.rtl-layout .post-full-content code {
    word-break: normal;
    direction: ltr;
    unicode-bidi: isolate;
}
```

I would appreciate it if you could try this with a sample of your articles and see if works.

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2473,4 +2473,6 @@ a.banner:hover span {
 
 .rtl-layout .post-full-content p code {
   word-break: normal;
+  direction: ltr;
+  unicode-bidi: isolate;
 }
