--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2474,5 +2474,6 @@ a.banner:hover span {
 .rtl-layout .post-full-content p code {
   word-break: normal;
   direction: ltr;
+  white-space: nowrap;
   unicode-bidi: isolate;
 }
