feat: make author avatar SVG accessible

--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -13,6 +13,7 @@
         %}
     {% else %}
         <span class="author-profile-image">
+            {% set avatarTitle = author.name %}
             {% include "partials/icons/avatar.njk" %}
         </span>
     {% endif %}
