--- a/src/_includes/partials/card.njk
+++ b/src/_includes/partials/card.njk
@@ -62,6 +62,7 @@
                                         %}
                                     {% else %}
                                         <span class="author-profile-image">
+                                            {% set avatarTitle = originalAuthor.name %}
                                             {% include "partials/icons/avatar.njk" %}
                                         </span>
                                     {% endif %}
@@ -87,6 +88,7 @@
                                     %}
                                 {% else %}
                                     <span class="author-profile-image">
+                                        {% set avatarTitle = post.primary_author.name %}
                                         {% include "partials/icons/avatar.njk" %}
                                     </span>
                                 {% endif %}
