fix: change parent container's class to avatar-wrapper when avatar SVG is used, adjust styles for author page

--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -12,7 +12,7 @@
             author.image_dimensions.profile_image
         %}
     {% else %}
-        <span class="author-profile-image">
+        <span class="avatar-wrapper">
             {% set avatarTitle = author.name %}
             {% include "partials/icons/avatar.njk" %}
         </span>
