--- a/src/search-results.njk
+++ b/src/search-results.njk
@@ -7,7 +7,8 @@ permalink: '/search/'
 {% set codeinjection_head = doc.codeinjection_head %}
 {% set codeinjection_foot = doc.codeinjection_foot %}
 
-{% set title = site.title %}
+{% set searchLabel %}{% t 'search.label' %}{% endset %}
+{% set title = searchLabel + " - " + site.title %}
 
 {% block content %}
     <main id="site-main" class="site-main outer">
@@ -34,12 +35,19 @@ permalink: '/search/'
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:description" content="{% t 'meta-tags:description' %}">
     <meta property="og:url" content="{{ site.url + permalink }}">
+    <meta property="og:image" content="{{ site.cover_image }}">
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
 
     {# Twitter Card #}
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ site.title }}">
+    <meta name="twitter:description" content="{% t 'meta-tags:description' %}">
     <meta name="twitter:url" content="{{ site.url + permalink }}">
+    <meta name="twitter:image" content="{{ site.cover_image }}">
     <meta name="twitter:site" content="{{ site.twitter }}">
+
+    <meta property="og:image:width" content="{{ site.image_dimensions.cover_image.width }}">
+    <meta property="og:image:height" content="{{ site.image_dimensions.cover_image.height }}">
 {% endblock %}
