feat: load banner conditionally

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -47,6 +47,7 @@
             {% include "assets/js/algolia-locale-setup.js" %}
             {% include "assets/js/search-bar.js" %}
             {% include "assets/js/client-dayjs.js" %}
+            {% include "assets/js/cookie-checker.js" %}
         {% endset %}
         <script>{{ js | jsMin | safe }}</script>
 
