--- a/src/_includes/partials/card.njk
+++ b/src/_includes/partials/card.njk
@@ -1,7 +1,7 @@
 {% macro card(post, index) %}
     {% set lazyLoad = true if (index >= 4) else false %}
     {% set originalAuthor = post.original_post.primary_author %}
-    <article class="post-card {{ post.class }}">
+    <article class="post-card" data-test-label="post-card">
         {% if post.feature_image %}
             <a class="post-card-image-link" href="{{ post.path | url }}" aria-label="{{ post.title }}">
                 {% 
@@ -44,15 +44,12 @@
                 {% if post.primary_author.name === "freeCodeCamp.org" %}
                     <time class="meta-item-single" datetime="{{ post.published_at }}">{% timeAgo post.published_at %}</time>
                 {% else %}
-                    <ul class="author-list">
+                    <ul class="author-list" data-test-label="author-list">
                         {% if post.original_post %}
                             <li class="author-list-item">
-                                <div class="author-name-tooltip">
-                                    {{ originalAuthor.name }}
-                                </div>
-                                {% if originalAuthor.profile_image %}
-                                    {# Original author is coming from another Ghost instance, so no need to use the url filter #}
-                                    <a href="{{ originalAuthor.url }}" class="static-avatar">
+                                <a href="{{ originalAuthor.url }}" class="static-avatar">
+                                    {% if originalAuthor.profile_image %}
+                                        {# Original author is coming from another Ghost instance, so no need to use the url filter #}
                                         {% 
                                             image
                                             originalAuthor.profile_image,
@@ -63,12 +60,13 @@
                                             originalAuthor.image_dimensions.profile_image,
                                             lazyLoad
                                         %}
-                                    </a>
-                                {% else %}
-                                    <a href="{{ originalAuthor.url }}" class="static-avatar author-profile-image">
-                                        {% include "partials/icons/avatar.njk" %}
-                                    </a>
-                                {% endif %}
+                                    {% else %}
+                                        <span class="avatar-wrapper">
+                                            {% set avatarTitle = originalAuthor.name %}
+                                            {% include "partials/icons/avatar.njk" %}
+                                        </span>
+                                    {% endif %}
+                                </a>
                                 <span class="meta-content">
                                     <a class="meta-item" href="{{ originalAuthor.url }}">{% t 'localization-meta.roles.author', { authorName: originalAuthor.name } %} ({% t 'localization-meta.languages.en' %})</a>
                                     <time class="meta-item" datetime="{{ post.original_post.published_at }}">{% timeAgo post.original_post.published_at %}</time>
@@ -76,11 +74,8 @@
                             </li>
                         {% endif %}
                         <li class="author-list-item">
-                            <div class="author-name-tooltip">
-                                {{ post.primary_author.name }}
-                            </div>
-                            {% if post.primary_author.profile_image %}
-                                <a href="{{ post.primary_author.path | url }}" class="static-avatar">
+                            <a href="{{ post.primary_author.path | url }}" class="static-avatar">
+                                {% if post.primary_author.profile_image %}
                                     {% 
                                         image
                                         post.primary_author.profile_image,
@@ -91,12 +86,13 @@
                                         post.primary_author.image_dimensions.profile_image,
                                         lazyLoad
                                     %}
-                                </a>
-                            {% else %}
-                                <a href="{{ post.primary_author.path | url }}" class="static-avatar author-profile-image">
-                                    {% include "partials/icons/avatar.njk" %}
-                                </a>
-                            {% endif %}
+                                {% else %}
+                                    <span class="avatar-wrapper">
+                                        {% set avatarTitle = post.primary_author.name %}
+                                        {% include "partials/icons/avatar.njk" %}
+                                    </span>
+                                {% endif %}
+                            </a>
                             <span class="meta-content">
                                 <a class="meta-item" href="{{ post.primary_author.path | url }}">
                                     {% if post.original_post %}
