Apply suggestions from code review
Co-authored-by: Kristofer Koishigawa <scissorsneedfoodtoo@gmail.com>

--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,4 +1,4 @@
-<a class="banner" id="banner" data-test-label="banner" rel="noopener noreferrer" href="{% t 'links:banner' %}" target="_blank">
+<a class="banner" id="banner" data-test-label="banner" rel="noopener noreferrer" target="_blank">
     <p id="banner-text"></p>
 </a>
 
